<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@android:drawable/btn_star"
            android:title="@string/menu_prodotti" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/menu_andamento" />
        <item
            android:id="@+id/nav_segnalazione"
            android:icon="@android:drawable/stat_notify_error"
            android:title="@string/menu_segnalazione" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_faq" />
        <item
            android:id="@+id/nav_logout"
            android:icon="?attr/homeAsUpIndicator"
            android:title="@string/menu_logout" />
    </group>
</menu>