<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mariomonaco.pcto2024_droid.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.mariomonaco.pcto2024_droid.ui.gallery.ProductsFragment"
        android:label="@string/menu_prodotti"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.mariomonaco.pcto2024_droid.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_andamento"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_segnalazione"
        android:name="com.mariomonaco.pcto2024_droid.ui.segnalazione.SegnalazioneFragment"
        android:label="@string/menu_segnalazione"
        tools:layout="@layout/fragment_segnalazione" />

    <fragment
        android:id="@+id/nav_faq"
        android:name="com.mariomonaco.pcto2024_droid.ui.faq.FaqFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faq" />

    <fragment
        android:id="@+id/nav_logout"
        android:name="com.mariomonaco.pcto2024_droid.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />
</navigation>